/*
 * $Id: ChangeLog,v 1.983 2003/04/22 22:34:05 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-04-24 11:00 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/rtl/tbrowse.prg
    ! Fix display when ::Freeze equal to ::ColCount
      Reported by Gianluca Piemonte.

2003-04-22 15:19 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    ! Removed logic of "eating" '\' in strotrim() and replaced with adding '\' as '[' prefix.

2003-04-22 16:00 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * include/hbrpc.ch
    + Added server status macros

  * source/rtl/trpc.prg
    % The RPC function execution is now made in a separate thread,
      to allow receiving of new commands from the client in the
      meanwhile (i.e. "stop executing the RPC! or QUIT").
    + Added TRpcService::IsCanceled() to allow the RPC function to
      know if the user requested cancelation.
    + Added RPC protocol support for cancelation

  * source/rtl/trpccli.prg
    + Added StopCall() for cancellation support.
    ! Compressed + Encripted data were uncompressed and decrypted in
      the wrong order :-( ; a left over. Now is fixed and working

  * tests/rpcclient.prg
    + Reactivated encryption test

2003-04-22 10:53 UTC+0200 Maurilio Longo <maurilio.longo@libero.it>
  * source/vm/itemapi.c
    ! Added non-finite tests for os2.gcc, and w32.rsxnt,
      which fixes the problems that they had with evaluating str(log(-1)).

      NOTE: Change borrowed from Harbour


2003-04-22 09:53 UTC+0200 Maurilio Longo <maurilio.longo@libero.it>
  * config/lib.cf
    * changed first:: rule to test HB_MT instead of MT_LIBNAME to be able to
      build a single threaded xHarbour on OS/2
  * source/odbc/odbc.c
    * don't build on OS/2 (no ODBC support available)
  * source/rtl/Makefile
    * test HB_MT instead of MT_LIBNAME